# jabbot

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .pytest.ini  .releaserc.toml  .ruff.toml  CHANGELOG.md  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: develop.yml  release.yml
src/app/: __main__.py
src/app/api/: __init__.py  _api.py
src/app/api/exceptions/: __init__.py  _exceptions.py
src/app/api/v1/endpoints/: root.py
src/app/api/v1/routes/: __init__.py
src/app/cli/: commands.py
src/app/client/: __init__.py  _client.py  bot.py
src/app/core/: exceptions.py  logging.py
src/app/core/config/: settings.py
src/app/core/di/: container.py
src/app/core/di/providers/: client.py  fastapi_command.py  scheduler.py
src/app/infrastructure/scheduler/: apscheduler.py  context.py  scheduler.py  wrappers.py
tests/: requirements.txt  test_dummy.py
