[project]
name = "jabbot"
dynamic = ["version"]
description = ""
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.3",
    "dynaconf>=3.2.13",
    "orjson>=3.11.8",
    "rich>=15.0.0",
    "structlog>=25.5.0",
]

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[project.scripts]
jabbot = "app.cli.commands:cli"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
