[project]
name = "jabbot"
dynamic = ["version"]
description = ""
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "click>=8.3.3",
    "dishka>=1.10.1",
    "dynaconf>=3.2.13",
    "fastapi>=0.136.1",
    "orjson>=3.11.8",
    "rich>=14.3.4",
    "slixmpp>=1.12.0,<2",
    "slixmpp-omemo>=2.1.0",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
]

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[project.scripts]
jabbot = "app.cli.commands:cli"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
